--- a/css/style.css
+++ b/css/style.css
@@ -10,124 +10,91 @@ body {
   color: #68667a;
 }
 
-/* width: 1200px;
-    margin: 0 auto; */
-.header {
-  width: 50%;
+.container {
+  width: 95%;
   margin: 0 auto;
+}
+
+.header {
+  width: 80%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 0.8rem;
   padding: 10px;
-  text-align: center;
-}
-.header h1 {
-  font-weight: 300;
-  font-size: 25px;
-  color: #626174;
-}
-.header h2 {
-  font-size: 25px;
-  color: #626174;
-}
-.header p {
-  margin-top: 10px;
-  color: #626174;
-  font-size: 20px;
+  margin: 0 auto;
 }
 
 .main {
   width: 100%;
-  padding: 15px;
-  margin-top: 30px;
-  margin-bottom: 40px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-between;
+  gap: 10px;
+  padding: 10px;
 }
 .main .card {
-  width: 90%;
-  border-radius: 10px;
+  width: 100%;
+  padding: 25px;
+  border-radius: 5px;
+  margin-top: 20px;
   background-color: #fff;
-  padding: 40px;
-  margin: 0 auto;
-  box-shadow: 2px 2px 5px #999;
-  margin-top: 40px;
-}
-.main .card h2 {
-  font-size: 35px;
-}
-.main .card p {
-  font-size: 25px;
-  margin-top: 10px;
-  line-height: 45px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .main .card .image {
-  margin-top: 25px;
   display: flex;
   justify-content: flex-end;
-}
-.main .card .image img {
-  width: 100px;
-  height: 100px;
-}
-.main .card-1 {
-  border-top: 5px solid #5acac9;
-}
-.main .card-2 {
-  border-top: 5px solid #c83c3b;
-}
-.main .card-3 {
-  border-top: 5px solid #d1a358;
-}
-.main .card-4 {
-  border-top: 5px solid #65a3d5;
+  margin: 15px;
 }
 
 @media only screen and (min-width: 1200px) {
+  .header {
+    font-size: 1.3rem;
+  }
+
   .main {
-    width: 100%;
-    padding: 15px;
-    margin-top: 30px;
-    margin-bottom: 40px;
+    font-size: 16px;
+    max-width: 1300px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(6, 4fr);
+    grid-template-rows: repeat(6, 4fr);
+    height: 100vh;
   }
   .main .card {
-    width: 325px;
-    border-radius: 5px;
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 2px 2px 5px #999;
+    width: 370px;
+    height: 230px;
     margin-top: 30px;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
-  .main .card h2 {
-    font-size: 25px;
+  .main .card img {
+    margin-top: 20px;
   }
-  .main .card p {
-    font-size: 16px;
-    margin-top: 10px;
-    line-height: 25px;
+
+  .card-1 {
+    grid-column: 1/3;
+    transform: translateY(50%);
+    border-top: 5px solid #45d3d3;
   }
-  .main .card .image {
-    margin-top: 25px;
-    display: flex;
-    justify-content: flex-end;
+
+  .card-2 {
+    grid-column: 3/5;
+    border-top: 5px solid #ea5353;
   }
-  .main .card .image img {
-    width: 50px;
-    height: 50px;
+
+  .card-3 {
+    grid-column: 3/5;
+    grid-row: 2/3;
+    border-top: 5px solid #fcaf4a;
   }
-  .main .card-1 {
-    border-top: 5px solid #5acac9;
-    position: absolute;
-    top: 315px;
-    left: 155px;
-  }
-  .main .card-2 {
-    border-top: 5px solid #c83c3b;
-  }
-  .main .card-3 {
-    border-top: 5px solid #d1a358;
-  }
-  .main .card-4 {
-    border-top: 5px solid #65a3d5;
-    position: absolute;
-    top: 315px;
-    right: 155px;
+
+  .card-4 {
+    grid-column: 5/7;
+    transform: translateY(50%);
+    border-top: 5px solid #549ef2;
   }
 }
 
